<resources>
    <string name="app_name_short">NFC Controller for Sonos</string>
    <string name="sonos_login" translatable="false">Sonos Login</string>
    <string name="start_authorization">Start Login</string>
    <string name="error">Error: %1$s</string>
    <string name="error_long">Error (%1$d): %2$s, %3$s</string>
    <string name="login_introduction">To allow the app to control your Sonos you first have to login with your Sonos account. This happens in a browser window on the website of Sonos. That way the app doesn´t see your login details it just gets an access token from Sonos.</string>
    <string name="cover_image">Cover image</string>
    <string name="loading_favorites">Loading favorites</string>
    <string name="refresh_access_token">Refreshing Access Token</string>
    <string name="loading_metadata">Loading metadata</string>
    <string name="error_loading_metadata">Error loading metadata: %1$s</string>
    <string name="starting_favorite">Starting favorite</string>
    <string name="error_starting_favorite">Error starting: %1$s</string>
    <string name="favorite">Favorite</string>
    <string name="pair_tag_message">This will write a link to \'%1$s\' on the tag. Scanning the tag later on will start this favorite.\n\nPlease hold the tag on the phone now.</string>
    <string name="scan_tag">Scan tag</string>
    <string name="cancel">Cancel</string>
    <string name="no_selection">No selection</string>
    <string name="tag_written">Tag successfully written</string>
    <string name="tag_written_error">Error writing tag: %1$s</string>
    <string name="tag_invalid">Tag supports: %1$s, we need \'android.nfc.tech.Ndef\' or \'android.nfc.tech.NdefFormattable\'</string>
    <string name="household_and_group_selection">Household and Group selection</string>
    <string name="household_and_group_selection_description">Before you can start you have to select a Sonos Group which the app should use. The Household is pretty unreadable, please select one and see which Group belongs to it.</string>
    <string name="household">Household</string>
    <string name="group">Group</string>
    <string name="use_selection">Use selection</string>
    <string name="link_tag_description">Choose a favorite and press the \'PAIR\' button.</string>
    <string name="loading_access_token">Loading access token</string>
    <string name="starting_browser_for_login">Starting browser for login</string>
    <string name="no_household_found">No household available</string>
    <string name="no_group_found">No group available</string>
    <string name="tag_read_empty">Empty or unreadable tag</string>
    <string name="tag_read_error">Error reading tag: %1$s</string>
    <string name="loading_households">Loading Households</string>
    <string name="loading_groups">Loading Groups</string>
    <string name="finding_previous_group">Finding previous Group</string>
    <string name="no_household_selected">No Household selected</string>
    <string name="no_group_selected">No Group selected</string>
    <string name="authorization_cancelled">Authorization cancelled</string>
    <string name="couldnt_start_browser">Couldn\'t start browser</string>
    <string name="favorite_not_found_in_cache">Favourite \'%1$s\' not in cache</string>
    <string name="volume_changed">Volume %1$s</string>
    <string name="start" translatable="false">Start</string>
    <string name="pair_menu">Pairing</string>
    <string name="pair_button">Pair</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="start_playback">Starting playback</string>
    <string name="stop_playback">Stopping playback</string>
    <string name="skip_to_previous">Skipping to previous title</string>
    <string name="skip_to_next">Skipping to next title</string>
    <string name="loading_playerstate">Loading player state</string>
    <string name="skip_to_previous_button">Previous title</string>
    <string name="play_button">Start playback</string>
    <string name="pause_button">Pause playback</string>
    <string name="skip_to_next_button">Next title</string>
    <string name="choose_household_group">Change household/group</string>
    <string name="third_party_notices">Third-Party Libraries</string>
    <string name="tag_gone">Error reading tag. Tag still there?</string>
    <string name="no_favorites">No Sonos favorites found. You have to define at least one Sonos favorite in the Sonos app otherwise you can\'t select one here.</string>
    <string name="no_nfc_adapter_title">No NFC adapter found</string>
    <string name="no_nfc_adapter_message">The app cannot be used without a NFC adapter :\'-(</string>
    <string name="tag_invalid_title">Error: Invalid tag</string>
    <string name="tag_invalid_ndef">NDEF tag not writable</string>
    <string name="tag_invalid_ndefformattable">NDEF Formattable tag not writable</string>
    <string name="tag_invalid_unsupported">Tag not NDEF formatted, or not supported by this device</string>
    <string name="third_party_notices_summary">Used third-party libraries</string>
    <string name="logout_summary">Remove user data and login again</string>
    <string name="play_sound_when_scanning_a_tag">Play sound when scanning a tag</string>
    <string name="play_sound_when_scanning_a_tag_summary">When turned on, a sound is played to indicate success/failure</string>
    <string name="household_and_group_selection_summary">Household: %1$s…\nGroup: %2$s…</string>
    <string name="other">Other</string>
    <string name="shuffle_playback">Shuffle playback</string>
    <string name="shuffle_playback_summary">Play the tracks in the queue in a randomly shuffled order</string>
    <string name="playlist_empty">Playlist empty</string>
    <string name="playlist_empty_hint">Scan an NFC tag to start</string>
</resources>
