<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.github.kaiwinter.nfcsonos.main.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingTop="24dp">
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-64dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp">

                <LinearLayout
                    android:id="@+id/authorized"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/loading_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <TextView
                            android:id="@+id/loading_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ProgressBar
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:indeterminate="true" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/error_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/error_description"
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/section_margin"
                            android:layout_marginBottom="8dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/album_title"
                            style="@style/Base.TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp"
                            android:paddingEnd="0dp"
                            android:paddingBottom="10dp"
                            tools:text="Album title" />

                        <ImageView
                            android:id="@+id/cover_image"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:contentDescription="@string/cover_image"
                            app:srcCompat="@drawable/cover_placeholder" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarStyle"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/play_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_round"
                            android:contentDescription="@string/play_button"
                            android:padding="20dp"
                            android:src="@drawable/ic_baseline_play_arrow_24"
                            android:visibility="gone" />

                        <ImageButton
                            android:id="@+id/pause_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_round"
                            android:contentDescription="@string/pause_button"
                            android:padding="20dp"
                            android:src="@drawable/ic_outline_pause_24"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
